--- a/src/pages/TagPage.module.css
+++ b/src/pages/TagPage.module.css
@@ -51,6 +51,31 @@
   }
 }
 
+.gridLarge {
+  --card-media-height: 420px;
+  grid-template-columns: 1fr;
+  gap: 0.75rem;
+}
+
+@media (min-width: 500px) {
+  .gridLarge {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 900px) {
+  .gridLarge {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .gridLarge {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
 .more {
   display: block;
   width: 100%;
