post view username under media

--- a/src/pages/PostDetailPage.module.css
+++ b/src/pages/PostDetailPage.module.css
@@ -104,6 +104,7 @@
 /* Stack media vertically so user scrolls through each image/video */
 .galleryWrap {
   margin-top: 0.5rem;
+  margin-bottom: 0.75rem;
   width: 100%;
 }
 
