--- a/src/components/PostCard.module.css
+++ b/src/components/PostCard.module.css
@@ -20,6 +20,12 @@
   -webkit-tap-highlight-color: transparent;
 }
 
+.cardSelected {
+  outline: 2px solid var(--accent);
+  outline-offset: 2px;
+  z-index: 1;
+}
+
 .cardLink:hover {
   text-decoration: none;
 }
