--- a/src/components/Layout.module.css
+++ b/src/components/Layout.module.css
@@ -436,12 +436,9 @@
   .menuTopRow {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
     gap: 0.5rem;
     margin-bottom: 0.35rem;
-  }
-  .menuTopRow .menuSectionTitle {
-    margin-bottom: 0;
   }
   .menuRow {
     display: flex;
