--- a/src/pages/ForumPage.module.css
+++ b/src/pages/ForumPage.module.css
@@ -115,6 +115,12 @@
   text-decoration: none;
 }
 
+.postLinkFocused {
+  outline: 2px solid var(--accent);
+  outline-offset: 2px;
+  border-radius: 0.5rem;
+}
+
 .avatarPlaceholder {
   width: 32px;
   height: 32px;
